[project]
name = "paper-c"
version = "0.1.0"
description = ""
authors = [
    {name = "morsoletodev",email = "106322393+morsoletodev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "xgboost (>=3.0.3,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
